<resources>
    <string name="additional_system_update" />
    <string name="additional_system_update_menu" />
    <string name="input_method_selector_show_automatically_value">0</string>
    <string name="input_method_selector_always_show_value">1</string>
    <string name="input_method_selector_always_hide_value">2</string>
    <string name="input_method_selector_visibility_default_value">0</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="device_info_default">Unknown</string>
    <string name="header_category_wireless_networks">WIRELESS &amp; NETWORKS</string>
    <string name="header_category_device">DEVICE</string>
    <string name="header_category_personal">PERSONAL</string>
    <string name="header_category_system">SYSTEM</string>
    <string name="turn_on_radio">Turn on radio</string>
    <string name="turn_off_radio">Turn off radio</string>
    <string name="sms_over_ims_on">Turn on SMS over IMS</string>
    <string name="sms_over_ims_off">Turn off SMS over IMS</string>
    <string name="ims_reg_required_on">Turn on IMS registration required</string>
    <string name="ims_reg_required_off">Turn off IMS registration required</string>
    <string name="lte_ram_dump_on">Turn on lte ram dump</string>
    <string name="lte_ram_dump_off">Turn off lte ram dump</string>
    <string name="radioInfo_menu_viewADN">View SIM address book</string>
    <string name="radioInfo_menu_viewFDN">View Fixed Dialing Numbers</string>
    <string name="radioInfo_menu_viewSDN">View Service Dialing Numbers</string>
    <string name="radioInfo_menu_getPDP">Get PDP list</string>
    <string name="radioInfo_service_in">In service</string>
    <string name="radioInfo_service_out">Out of service</string>
    <string name="radioInfo_service_emergency">Emergency calls only</string>
    <string name="radioInfo_service_off">Radio off</string>
    <string name="radioInfo_roaming_in">Roaming</string>
    <string name="radioInfo_roaming_not">Not roaming</string>
    <string name="radioInfo_phone_idle">Idle</string>
    <string name="radioInfo_phone_ringing">Ringing</string>
    <string name="radioInfo_phone_offhook">Call in progress</string>
    <string name="radioInfo_data_disconnected">Disconnected</string>
    <string name="radioInfo_data_connecting">Connecting</string>
    <string name="radioInfo_data_connected">Connected</string>
    <string name="radioInfo_data_suspended">Suspended</string>
    <string name="radioInfo_unknown">unknown</string>
    <string name="radioInfo_display_packets">pkts</string>
    <string name="radioInfo_display_bytes">bytes</string>
    <string name="radioInfo_display_dbm">dBm</string>
    <string name="radioInfo_display_asu">asu</string>
    <string name="radioInfo_lac">LAC</string>
    <string name="radioInfo_cid">CID</string>
    <string name="sdcard_unmount">Unmount internal flash memory</string>
    <string name="sdcard_format">Erase internal flash memory</string>
    <string name="small_font">Small</string>
    <string name="medium_font">Medium</string>
    <string name="large_font">Large</string>
    <string name="font_size_preview_text">Servez à ce monsieur une bière et des kiwis.</string>
    <string name="font_size_save">OK</string>
    <string name="sdcard_setting">SD card</string>
    <string name="battery_info_status_label">Battery status:</string>
    <string name="battery_info_power_label">Power plug:</string>
    <string name="battery_info_scale_label">Battery scale:</string>
    <string name="battery_info_level_label">Battery level:</string>
    <string name="battery_info_health_label">Battery health:</string>
    <string name="battery_info_technology_label">Battery technology:</string>
    <string name="battery_info_voltage_label">Battery voltage:</string>
    <string name="battery_info_voltage_units">mV</string>
    <string name="battery_info_temperature_label">Battery temperature:</string>
    <string name="battery_info_temperature_units">° C</string>
    <string name="battery_info_uptime">Time since boot:</string>
    <string name="battery_info_awake_battery">Awake time on battery:</string>
    <string name="battery_info_awake_plugged">Awake time when charging:</string>
    <string name="battery_info_screen_on">Screen ON time:</string>
    <string name="battery_info_status_unknown">Unknown</string>
    <string name="battery_info_status_charging">Charging</string>
    <string name="battery_info_status_charging_ac">(AC)</string>
    <string name="battery_info_status_charging_usb">(USB)</string>
    <string name="battery_info_status_discharging">Discharging</string>
    <string name="battery_info_status_not_charging">Not charging</string>
    <string name="battery_info_status_full">Full</string>
    <string name="battery_info_power_unplugged">Unplugged</string>
    <string name="battery_info_power_ac">AC</string>
    <string name="battery_info_power_usb">USB</string>
    <string name="battery_info_power_ac_usb">AC+USB</string>
    <string name="battery_info_power_unknown">Unknown</string>
    <string name="battery_info_health_unknown">Unknown</string>
    <string name="battery_info_health_good">Good</string>
    <string name="battery_info_health_overheat">Overheat</string>
    <string name="battery_info_health_dead">Dead</string>
    <string name="battery_info_health_over_voltage">Over voltage</string>
    <string name="battery_info_health_unspecified_failure">Unknown error</string>
    <string name="battery_info_health_cold">Cold</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="bluetooth_visibility">Discoverable</string>
    <string name="bluetooth_is_discoverable">Visible to all nearby Bluetooth devices (%1$s)</string>
    <string name="bluetooth_is_discoverable_always">Visible to all nearby Bluetooth devices</string>
    <string name="bluetooth_not_visible_to_other_devices">Not visible to other Bluetooth devices</string>
    <string name="bluetooth_only_visible_to_paired_devices">Only visible to paired devices</string>
    <string name="bluetooth_not_discoverable">Make device discoverable</string>
    <string name="bluetooth_visibility_timeout">Visibility timeout</string>
    <string name="bluetooth_visibility_timeout_summary">Set how long device will be discoverable</string>
    <string name="bluetooth_lock_voice_dialing">Lock voice dialing</string>
    <string name="bluetooth_lock_voice_dialing_summary">Prevent use of the bluetooth dialer when the screen is locked</string>
    <string name="bluetooth_devices">Bluetooth devices</string>
    <string name="bluetooth_device_name">Device name</string>
    <string name="bluetooth_name_not_set">No name set, using account name</string>
    <string name="bluetooth_scan_for_devices">Scan for devices</string>
    <string name="bluetooth_rename_device">Rename device</string>
    <string name="bluetooth_rename_button">Rename</string>
    <string name="bluetooth_disconnect_title">Disconnect?</string>
    <string name="proxy_settings_title">Proxy settings</string>
    <string name="airplane_mode">Airplane mode</string>
    <string name="radio_controls_title">Network Settings</string>
    <string name="wireless_networks_settings_title">Wireless &amp; networks</string>
    <string name="date_and_time_settings_title">Date &amp; time</string>
    <string name="location_settings_title">Location services</string>
    <string name="security_settings_title">Security</string>
    <string name="bluetooth_settings_title">Bluetooth</string>
    <string name="nfc_quick_toggle_title">NFC</string>
    <string name="nfc_quick_toggle_summary">Allow data exchange when the phone touches another device</string>
    <string name="android_beam_settings_title">Android Beam</string>
    <string name="wifi_settings_title">Wi-Fi</string>
    <string name="wifi_p2p_settings_title">Wi-Fi direct</string>
    <string name="wifi_p2p_settings_summary">Set up peer-to-peer connectivity</string>
    <string name="testing_wifi_info">Wi-Fi information</string>
    <string name="wifi_api_test">Wi-Fi API</string>
    <string name="wifi_status_test">Wi-Fi status</string>
    <string name="wifi_config_info">Wi-Fi config</string>
    <string name="sound_settings">Sound</string>
    <string name="notification_pulse_title">Pulse notification light</string>
    <string name="dock_settings">Dock</string>
    <string name="sync_settings">Accounts &amp; sync</string>
    <string name="display_settings">Display</string>
    <string name="accelerometer_title">Auto-rotate screen</string>
    <string name="brightness">Brightness</string>
    <string name="screen_timeout">Sleep</string>
    <string name="screen_timeout_summary">After %1$s of inactivity</string>
    <string name="wallpaper_settings_title">Wallpaper</string>
    <string name="title_font_size">Font size</string>
    <string name="summary_font_size">%1$s</string>
    <string name="dialog_title_font_size">Font size</string>
    <string name="storage_settings">Storage</string>
    <string name="tether_settings_title_wifi">Portable hotspot</string>
    <string name="network_settings_title">Mobile networks</string>
    <string name="about_settings">About device</string>
    <string name="applications_settings">Apps</string>
    <string name="language_settings">Language &amp; input</string>
    <string name="testing">Testing</string>
    <string name="testing_phone_info">Device information</string>
    <string name="testing_battery_info">Battery information</string>
    <string name="development_settings_title">Developer options</string>
    <string name="testing_usage_stats">Usage statistics</string>
    <string name="accessibility_settings">Accessibility</string>
    <string name="power_usage_summary_title">Battery</string>
    <string name="vpn_settings_title">VPN</string>
    <string name="privacy_settings">Backup &amp; reset</string>
    <string name="wimax_settings">4G settings</string>
    <string name="wimax_settings_summary">Set up &amp; manage 4G network and modem</string>
    <string name="data_usage_summary_title">Data usage</string>
    <string name="tscalibration_title">Calibrating the touch screen</string>
    <string name="accelerometer_coordinate_title">Accelerometer coordinate system</string>
    <string name="smart_brightness_title">Smart backlight</string>
    <string name="smart_brightness_summary">Auto adjust the backlight.</string>
    <string name="hdmi_output_mode">HDMI output mode</string>
    <string name="hdmi_output_mode_summary">Set the default output mode of HDMI</string>
    <string name="screen_adaption_summary">Used to adjust size of some games display screen .</string>
    <string name="screen_adaption_setting">screen adaption</string>
    <string name="eth_settings_title">Ethernet</string>
    <string name="eth_toggle_title">Use Ethernet</string>
    <string name="eth_settings">Ethernet Settings</string>
    <string name="eth_devices">Ethernet Devices</string>
    <string name="eth_conf">Ethernet Configure</string>
    <string name="eth_ip_address">IP Address</string>
    <string name="eth_ip_string">0.0.0.0</string>
    <string name="eth_mac_address">MAC Address</string>
    <string name="eth_mac_string">00:00:00:00:00:00</string>
    <string name="eth_advanced_configure">Advanced Configure</string>
    <string name="apps_title">Apps</string>
    <string name="install_app_title">Install Apps</string>
    <string name="app_info_item_name_title">com.general.mediaplayer</string>
    <string name="app_info_item_version_title">1.0</string>
    <string name="app_info_item_btn_title">uninstall</string>
    <string name="app_install_exit_btn_title">Exit</string>
    <string name="update_media_settings_title">Update media</string>
    <string name="switch_sd_btn_title">SD Card</string>
    <string name="switch_usb_btn_title">USB</string>
    <string name="exit_dialog_title">Exit</string>
</resources>