<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/wireless_networks_settings_title"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference android:persistent="false" android:title="@string/airplane_mode" android:key="toggle_airplane" android:disableDependentsState="true" />
    <PreferenceScreen android:title="@string/eth_settings_title" android:key="ethernet_settings" android:fragment="com.general.mediaplayer.csr.ethernet.EthernetSettings" />
    <PreferenceScreen android:title="@string/vpn_settings_title" android:key="vpn_settings" android:fragment="com.general.mediaplayer.csr.vpn2.VpnSettings" />
    <PreferenceScreen android:title="@string/tether_settings_title_wifi" android:key="tether_settings" android:fragment="com.general.mediaplayer.csr.TetherSettings" />
    <PreferenceScreen android:title="@string/wimax_settings" android:key="wimax_settings" android:summary="@string/wimax_settings_summary">
        <intent android:targetPackage="com.general.mediaplayer.csr.wimax" android:action="android.intent.action.MAIN" android:targetClass="com.general.mediaplayer.csr.wimax.WimaxSettings" />
    </PreferenceScreen>
    <CheckBoxPreference android:persistent="false" android:title="@string/nfc_quick_toggle_title" android:key="toggle_nfc" android:summary="@string/nfc_quick_toggle_summary" />
    <PreferenceScreen android:title="@string/android_beam_settings_title" android:key="android_beam_settings" android:fragment="com.general.mediaplayer.csr.nfc.AndroidBeam" />
    <CheckBoxPreference android:persistent="false" android:title="@string/wifi_p2p_settings_title" android:key="toggle_wifi_p2p" />
    <PreferenceScreen android:title="@string/wifi_p2p_settings_title" android:key="wifi_p2p_settings" android:summary="@string/wifi_p2p_settings_summary" android:fragment="com.general.mediaplayer.csr.wifi.p2p.WifiP2pSettings" />
    <PreferenceScreen android:title="@string/network_settings_title" android:key="mobile_network_settings"> android:dependency="toggle_airplane">
<intent android:targetPackage="com.android.phone" android:action="android.intent.action.MAIN" android:targetClass="com.android.phone.Settings" />
    </PreferenceScreen>
    <PreferenceScreen android:title="@string/proxy_settings_title" android:key="proxy_settings" android:fragment="com.general.mediaplayer.csr.ProxySelector" />
</PreferenceScreen>