<?xml version="1.0" encoding="utf-8"?>
<preference-headers
  xmlns:android="http://schemas.android.com/apk/res/android">
    <header android:id="@id/apps_manager" android:title="@string/apps_title" android:fragment="com.general.mediaplayer.csr.AppsManagerSettings" />
    <header android:id="@id/wifi_settings" android:title="@string/wifi_settings_title" android:fragment="com.general.mediaplayer.csr.wifi.WifiSettings" />
    <header android:id="@id/bluetooth_settings" android:title="@string/bluetooth_settings_title" android:fragment="com.general.mediaplayer.csr.bluetooth.BluetoothSettings" />
    <header android:icon="@drawable/ic_settings_data_usage" android:id="@id/data_usage_settings" android:title="@string/data_usage_summary_title" android:fragment="com.general.mediaplayer.csr.DataUsageSummary" />
    <header android:id="@id/operator_settings" android:fragment="com.general.mediaplayer.csr.WirelessSettings">
        <intent android:action="com.general.mediaplayer.csr.OPERATOR_APPLICATION_SETTING" />
    </header>
    <header android:id="@id/wireless_settings" android:title="@string/radio_controls_title" android:fragment="com.general.mediaplayer.csr.WirelessSettings" android:breadCrumbTitle="@string/wireless_networks_settings_title" />
    <header android:id="@id/sound_settings" android:title="@string/sound_settings" android:fragment="com.general.mediaplayer.csr.SoundSettings" />
    <header android:id="@id/display_settings" android:title="@string/display_settings" android:fragment="com.general.mediaplayer.csr.DisplaySettings" />
    <header android:icon="@drawable/ic_settings_storage" android:id="@id/storage_settings" android:title="@string/storage_settings" android:fragment="com.general.mediaplayer.csr.deviceinfo.Memory" />
    <header android:icon="@drawable/ic_settings_battery" android:id="@id/battery_settings" android:title="@string/power_usage_summary_title" android:fragment="com.general.mediaplayer.csr.fuelgauge.PowerUsageSummary" />
    <header android:icon="@drawable/ic_settings_applications" android:id="@id/application_settings" android:title="@string/applications_settings" android:fragment="com.general.mediaplayer.csr.applications.ManageApplications" />
    <header android:id="@id/manufacturer_settings" android:fragment="com.general.mediaplayer.csr.WirelessSettings">
        <intent android:action="com.general.mediaplayer.csr.MANUFACTURER_APPLICATION_SETTING" />
    </header>
    <header android:icon="@drawable/ic_settings_sync" android:id="@id/sync_settings" android:title="@string/sync_settings" android:fragment="com.general.mediaplayer.csr.accounts.ManageAccountsSettings" />
    <header android:icon="@drawable/ic_settings_location" android:id="@id/location_settings" android:title="@string/location_settings_title" android:fragment="com.general.mediaplayer.csr.LocationSettings" />
    <header android:icon="@drawable/ic_settings_security" android:id="@id/security_settings" android:title="@string/security_settings_title" android:fragment="com.general.mediaplayer.csr.SecuritySettings" />
    <header android:icon="@drawable/ic_settings_language" android:id="@id/language_settings" android:title="@string/language_settings" android:fragment="com.general.mediaplayer.csr.inputmethod.InputMethodAndLanguageSettings" />
    <header android:icon="@drawable/ic_settings_backup" android:id="@id/privacy_settings" android:title="@string/privacy_settings" android:fragment="com.general.mediaplayer.csr.PrivacySettings" />
    <header android:icon="@drawable/ic_settings_dock" android:id="@id/dock_settings" android:title="@string/dock_settings" android:fragment="com.general.mediaplayer.csr.DockSettings" />
    <header android:id="@id/date_time_settings" android:title="@string/date_and_time_settings_title" android:fragment="com.general.mediaplayer.csr.DateTimeSettings" />
    <header android:icon="@drawable/ic_settings_accessibility" android:id="@id/accessibility_settings" android:title="@string/accessibility_settings" android:fragment="com.general.mediaplayer.csr.AccessibilitySettings" />
    <header android:icon="@drawable/ic_settings_development" android:id="@id/development_settings" android:title="@string/development_settings_title" android:fragment="com.general.mediaplayer.csr.DevelopmentSettings" />
    <header android:id="@id/update_media_settings" android:title="@string/update_media_settings_title" android:fragment="com.general.mediaplayer.csr.UpdateMediaFragement" />
    <header android:id="@id/about_settings" android:title="@string/about_settings" android:fragment="com.general.mediaplayer.csr.DeviceInfoSettings" />
    <header android:id="@id/exit_settings" android:title="@string/exit_dialog_title" android:fragment="com.general.mediaplayer.csr.ExitCsrSettings" />
</preference-headers>