<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/testing"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceScreen android:title="@string/testing_phone_info">
        <intent android:targetPackage="com.general.mediaplayer.csr" android:action="android.intent.action.MAIN" android:targetClass="com.general.mediaplayer.csr.RadioInfo" />
    </PreferenceScreen>
    <PreferenceScreen android:title="@string/testing_battery_info">
        <intent android:targetPackage="com.general.mediaplayer.csr" android:action="android.intent.action.MAIN" android:targetClass="com.general.mediaplayer.csr.BatteryInfo" />
    </PreferenceScreen>
    <PreferenceScreen android:title="@string/testing_usage_stats">
        <intent android:targetPackage="com.general.mediaplayer.csr" android:action="android.intent.action.MAIN" android:targetClass="com.general.mediaplayer.csr.UsageStats" />
    </PreferenceScreen>
    <PreferenceScreen android:title="@string/testing_wifi_info">
        <intent android:targetPackage="com.general.mediaplayer.csr" android:action="android.intent.action.MAIN" android:targetClass="com.general.mediaplayer.csr.wifi.WifiInfo" />
    </PreferenceScreen>
</PreferenceScreen>