<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/testing_wifi_info" android:key="parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference android:title="@string/wifi_api_test">
        <intent android:targetPackage="com.general.mediaplayer.csr" android:action="android.intent.action.MAIN" android:targetClass="com.general.mediaplayer.csr.wifi.WifiAPITest" />
    </Preference>
    <Preference android:title="@string/wifi_config_info">
        <intent android:targetPackage="com.general.mediaplayer.csr" android:action="android.intent.action.MAIN" android:targetClass="com.general.mediaplayer.csr.wifi.WifiConfigInfo" />
    </Preference>
    <Preference android:title="@string/wifi_status_test">
        <intent android:targetPackage="com.general.mediaplayer.csr" android:action="android.intent.action.MAIN" android:targetClass="com.general.mediaplayer.csr.wifi.WifiStatusTest" />
    </Preference>
</PreferenceScreen>