<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        android:orientation="vertical"
        android:id="@id/rl"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView android:id="@id/iv_app_info_item"
               android:layout_width="55.0dip"
               android:layout_height="55.0dip"
               android:layout_marginLeft="5.0dip"
               android:layout_marginTop="5.0dip"
               android:src="@drawable/ic_launcher_settings" />

    <TextView android:id="@id/tv_app_info_item_name"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="5.0dip"
              android:text="@string/app_info_item_name_title"
              android:layout_toRightOf="@id/iv_app_info_item"
              android:layout_alignTop="@id/iv_app_info_item" />

    <TextView android:id="@id/tv_app_info_item_version"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="5.0dip"
              android:text="@string/app_info_item_version_title"
              android:layout_toRightOf="@id/iv_app_info_item"
              android:layout_below="@id/tv_app_info_item_name" />

    <Button android:id="@id/btn_app_info_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5.0dip"
            android:text="@string/app_info_item_btn_title"
            android:layout_alignBottom="@id/tv_app_info_item_version"
            android:layout_alignParentRight="true" />

</RelativeLayout>